--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "env.h": "c",
         "trap.h": "c",
-        "elf.h": "c"
-    }
+        "elf.h": "c",
+        "monitor.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
